--- a/retype.yml
+++ b/retype.yml
@@ -5,8 +5,7 @@ url: https://uqbar-dev.github.io/kb/
 branding:
   logo: resources/logo.png
   logoDark: resources/logo.svg
-  title: Base de Conhecimento
-  label: by Uqbar
+  label: Base de Conhecimento
 
 meta:
   title: " | Encontre tudo que você precisa"
