--- a/retype.yml
+++ b/retype.yml
@@ -5,7 +5,7 @@ url: https://uqbar-dev.github.io/kb/
 branding:
   logo: resources/logo.png
   logoDark: resources/logo.svg
-  label: Base de Conhecimento
+  label: v0.0.1
 
 meta:
   title: " | Encontre tudo que você precisa"
